[package]
name = "scpty"
authors = ["One_Ordinary_Man"]
description = "App that creates the script with shebang."
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.7", features = ["derive"]}
